# MCP-Catalogo-BQ

./: .dockerignore  .env.example  .mcp.json  Dockerfile  README.md  pyproject.toml  server.py
src/: catalog.py  schemas.py  search.py
