[project]
name = "mcp-catalogo-bq"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "unidecode>=1.3",
    "uvicorn>=0.27",
    "starlette>=0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
